# rust-downloader

./: components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: binaries.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/parsers/: mod.rs  youtube.rs
src-tauri/src/util/: mod.rs  multipart-downloader.rs
src/components/: dependency-loader.tsx  download-form.tsx  download-list-item.tsx  download-popup.tsx  youtube-downloader-v2.tsx  youtube-downloader.tsx
src/lib/: command-api.ts  downloader.ts  transfer-stat.ts  youtube-parser.ts
src/lib/interfaces/: video-info.interface.ts
src/routes/: __root.tsx  index.lazy.tsx
src/store/: download-store.ts  external-binaries-store.ts  index.ts  store.ts
