[package]
name = "rust-tube"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_tube_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ffmpeg-sidecar = { git = "https://github.com/nathanbabcock/ffmpeg-sidecar", branch = "main" }
youtube_dl = { git="https://github.com/VirtualPirate/youtube-dl-rs", rev="78a8c30b", features = ["downloader-native-tls"] }
reqwest = { version = "0.12.8", features = ["blocking"] }
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.79"
tauri-plugin-store = "2"

